[tool.poetry]
name = "splunk-connect-for-snmp-poller"
version = "0.1.0"
description = "Translate SNMP poller for Splunk Products"
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "APACHE-2.0"

[tool.poetry.dependencies]
python = "^3.8"
pysnmp = "^4.4.12"
pyyaml = "^5.3"
lxml = "^4.6"

[tool.poetry.dev-dependencies]
#pytest-splunk-addon = "^1.4.0"
pytest = "*"
black = "20.8b1"

[tool.poetry.scripts]
sc4snmp-poller = "splunk_connect_for_snmp_poller:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


