[tool.poetry]
name = "splunk-connect-for-snmp-poller"
version = "0.1.0"
description = "Translate SNMP poller for Splunk Products"
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pysnmp = "^4.4.12"
pyyaml = "^5.4"
lxml = "^4.6"
requests = "^2.25.1"
schedule = "^1.0.0"
celery = "^5.0.5"
pymongo = "^3.11.3"

[tool.poetry.dev-dependencies]
#pytest-splunk-addon = "^1.4.0"
pytest = "*"
black = "21.4b0"

[tool.poetry.scripts]
sc4snmp-poller = "splunk_connect_for_snmp_poller.snmp_poller_server:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


