#
# Copyright 2021 Splunk Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[tool.poetry]
name = "splunk-connect-for-snmp-poller"
version = "0.1.0"
description = "Translate SNMP poller for Splunk Products"
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pysnmp = "^4.4.12"
pyyaml = "^5.4"
lxml = "^4.6"
requests = "^2.26.0"
schedule = "^1.0.0"
celery = "^5.1.2"
pymongo = "^3.11.3"
coverage = "^5.5"

[tool.poetry.dev-dependencies]
#pytest-splunk-addon = "^1.4.0"
pytest = "*"
black = "21.7b0"
pytest-cov = "^2.12.1"

[tool.poetry.scripts]
sc4snmp-poller = "splunk_connect_for_snmp_poller.snmp_poller_server:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


